--- a/CRMPhone/Dialogs/Admins/BindWorkerToWorkerDialog.xaml
+++ b/CRMPhone/Dialogs/Admins/BindWorkerToWorkerDialog.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="CRMPhone.Dialogs.Admins.BindCompanyToWorkerDialog"
+﻿<Window x:Class="CRMPhone.Dialogs.Admins.BindWorkerToWorkerDialog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -8,10 +8,10 @@
         xmlns:admins="clr-namespace:CRMPhone.ViewModel.Admins"
         xmlns:dto="clr-namespace:RequestServiceImpl.Dto;assembly=RequestServiceImpl"
         mc:Ignorable="d"
-        Title="Привязка компаний" Height="620" Width="480" MinWidth ="480" MinHeight="620"
+        Title="Привязка прикрепленных" Height="620" Width="480" MinWidth ="480" MinHeight="620"
         WindowStartupLocation="CenterOwner"
         WindowStyle="ToolWindow"
-        d:DataContext="{d:DesignInstance admins:BindCompanyToWorkerDialogViewModel}">
+        d:DataContext="{d:DesignInstance admins:BindWorkerToWorkerDialogViewModel}">
 
     <Grid>
         <Grid.RowDefinitions>
@@ -22,8 +22,8 @@
             <DockPanel>
                 <TextBlock Margin="3" VerticalAlignment="Center" Text="УК:"/>
                 <ComboBox Margin="3" Width="180" TabIndex ="1" DisplayMemberPath="Name" SelectedItem="{Binding SelectedCompany}" ItemsSource="{Binding CompanyList}" IsEditable="True" />
-                <TextBlock Margin="3" VerticalAlignment="Center" Text="Специальность:"/>
-                <ComboBox Margin="3" Width ="150" TabIndex ="2" DisplayMemberPath="Name" SelectedItem="{Binding SelectedSpeciality}" ItemsSource="{Binding WorkerList}" IsEditable="True" />
+                <TextBlock Margin="3" VerticalAlignment="Center" Text="Работник:"/>
+                <ComboBox Margin="3" Width ="150" TabIndex ="2" DisplayMemberPath="FullName" SelectedItem="{Binding SelectedWorker}" ItemsSource="{Binding WorkerList}" IsEditable="True" />
             </DockPanel>
             <DockPanel>
                 <Button Width="100" Margin ="5" Content="Добавить" HorizontalAlignment="Right" Command="{Binding AddCommand}"/>
@@ -39,17 +39,8 @@
                   HorizontalScrollBarVisibility="Auto"
                   VerticalScrollBarVisibility="Auto">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="УК" Width="*"
-                                    Binding="{Binding Path=ServiceCompany}">
-                    <DataGridTextColumn.ElementStyle>
-                        <Style TargetType="{x:Type TextBlock}">
-                            <Setter Property="TextWrapping" Value="Wrap"/>
-                            <Setter Property="Margin" Value="3"/>
-                        </Style>
-                    </DataGridTextColumn.ElementStyle>
-                </DataGridTextColumn>
-                <DataGridTextColumn Header="Специальность" Width="*"
-                                    Binding="{Binding Path=Speciality}">
+                <DataGridTextColumn Header="Прикрепленный" Width="*"
+                                    Binding="{Binding Path=FullName}">
                     <DataGridTextColumn.ElementStyle>
                         <Style TargetType="{x:Type TextBlock}">
                             <Setter Property="TextWrapping" Value="Wrap"/>
