--- a/CRMPhone/Dialogs/Admins/WorkerHouseAndTypeAddOrEditDialog.xaml
+++ b/CRMPhone/Dialogs/Admins/WorkerHouseAndTypeAddOrEditDialog.xaml
@@ -6,7 +6,7 @@
         xmlns:admins="clr-namespace:CRMPhone.ViewModel.Admins"
         xmlns:dto="clr-namespace:RequestServiceImpl.Dto;assembly=RequestServiceImpl"
         mc:Ignorable="d"
-        Title="Адреса и услуги" Height="330" Width="520" MinWidth ="320" MinHeight="330"
+        Title="Адреса и услуги" Height="430" Width="700" MinWidth ="700" MinHeight="430"
         WindowStartupLocation="CenterOwner"
         WindowStyle="ToolWindow"
         d:DataContext="{d:DesignInstance admins:WorkerHouseAndTypeAdminDialogViewModel}">
@@ -37,7 +37,7 @@
         </DockPanel>
         <DockPanel Grid.Row="1">
             <TextBlock Margin="3" VerticalAlignment="Center" Text="Услуга:"/>
-            <ComboBox Margin="3" Width="125" VerticalAlignment="Center" ItemsSource="{Binding FilterServiceList}" IsEditable="True"
+            <ComboBox Margin="3" Width="125" VerticalAlignment="Center" ItemsSource="{Binding FilterParentServiceList}" IsEditable="True"
                       IsReadOnly="True" SelectionChanged="CbOnSelectionChanged" DropDownClosed="CbOnDropDownClosed">
                 <ComboBox.ItemTemplate>
                     <DataTemplate>
@@ -49,11 +49,15 @@
                     </DataTemplate>
                 </ComboBox.ItemTemplate>
             </ComboBox>
+            <TextBlock Margin="3" VerticalAlignment="Center" Text="Причина:"/>
+            <ComboBox Margin="3" Width="140" VerticalAlignment="Center" DisplayMemberPath="Name" SelectedItem="{Binding SelectedService}" ItemsSource="{Binding ServiceList}" IsEditable="True" />
+
 
             <TextBlock Margin="3" VerticalAlignment="Center" Text="Приоритет:"/>
             <TextBox Margin="3" Width="45" VerticalAlignment="Center"  Text="{Binding Path=Weigth}"/>
 
             <Button Margin="5" Padding="5,0" HorizontalAlignment="Center" Height="24" Command="{Binding Path=AddCommand}">Добавить</Button>
+            <Button Margin="5" Padding="5,0" HorizontalAlignment="Center" Height="24" Command="{Binding Path=DeleteAllCommand}">Удалить все</Button>
 
         </DockPanel>
         <DataGrid Grid.Row="2"
@@ -76,6 +80,15 @@
                     </DataGridTextColumn.ElementStyle>
                 </DataGridTextColumn>
                 <DataGridTextColumn Header="Услуга" Width="180"
+                                            Binding="{Binding Path=ParentServiceType}">
+                    <DataGridTextColumn.ElementStyle>
+                        <Style TargetType="{x:Type TextBlock}">
+                            <Setter Property="TextWrapping" Value="Wrap"/>
+                            <Setter Property="Margin" Value="3"/>
+                        </Style>
+                    </DataGridTextColumn.ElementStyle>
+                </DataGridTextColumn>
+                <DataGridTextColumn Header="Причина" Width="180"
                                             Binding="{Binding Path=ServiceType}">
                     <DataGridTextColumn.ElementStyle>
                         <Style TargetType="{x:Type TextBlock}">
